# batocera.linux

./: .gitignore  Config.in  Dockerfile  Makefile  external.mk  pyproject.toml
configs/: createDefconfig.sh  sdk-common.board  (+1 more)
package/batocera/core/batocera-configgen/configgen/: pyproject.toml
package/batocera/core/batocera-configgen/configgen/configgen/: Command.py  Emulator.py  README.md  batoceraPaths.py  cli.py  config.py  controller.py  controllersConfig.py  emulatorlauncher.py  gun.py  input.py  profiler.py  run.py  types.py
package/batocera/core/batocera-configgen/configgen/configgen/emulators/: __init__.py  _base.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/: Generator.py  importer.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/amiberry/: amiberryGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/azahar/: azaharGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/bigpemu/: bigpemuGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/cannonball/: cannonballControllers.py  cannonballGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/catacombgl/: catacombglGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/cemu/: cemuControllers.py  cemuGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/cgenius/: cgeniusGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/citra/: citraGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/corsixth/: corsixthGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/devilutionx/: devilutionxGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/dhewm3/: dhewm3Generator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/dolphin/: dolphinControllers.py  dolphinGenerator.py  dolphinSYSCONF.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/dolphin_triforce/: dolphinTriforceControllers.py  dolphinTriforceGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/settings/: unixSettings.py
package/batocera/core/batocera-configgen/configgen/configgen/utils/: batoceraServices.py  bezels.py  buildargs.py  evmapy.py  hotkeygen.py  iterable.py  logger.py  metadata.py  missing.py  squashfs.py  videoMode.py  wheels.py  wheelsUtils.py
package/batocera/core/batocera-configgen/configgen/tests/: conftest.py  mock_controllers.py  mock_emulator.py  test_config.py  test_controller.py  test_controllers_config.py  test_emulator.py  test_emulatorlauncher.py  test_exceptions.py  test_gun.py  test_input.py  test_profiler.py
package/batocera/core/batocera-configgen/configgen/tests/__snapshots__/: test_config.ambr  test_controller.ambr  test_controllers_config.ambr  test_emulator.ambr  test_emulatorlauncher.ambr  test_input.ambr
package/batocera/core/batocera-configgen/configgen/tests/generators/: base.py  conftest.py  test_abuse.py  test_amiberry.py  test_azahar.py  test_bigpemu.py  test_bstone.py  test_cannonball.py  test_catacombgl.py  test_cdogs.py  test_cemu.py  test_cgenius.py  test_citra.py  test_clk.py  test_corsixth.py  test_devilutionx.py  test_dhewm3.py  test_dolphin.py  test_dolphin_triforce.py  test_dosbox.py  test_dosbox_staging.py  test_dosboxx.py  test_drastic.py  test_duckstation.py  test_duckstation_legacy.py  test_dxx_rebirth.py  test_easyrpg.py  test_ecwolf.py  test_eduke32.py  test_etlegacy.py  test_fallout1.py  test_fallout2.py  test_fba2x.py  test_flatpak.py  test_flycast.py  test_fpinball.py  test_fsuae.py  test_gsplus.py  test_gzdoom.py  test_hatari.py  (+65 more)
package/batocera/core/batocera-configgen/configgen/tests/settings/: test_unix_settings.py
package/batocera/core/batocera-configgen/configgen/tests/utils/: test_batocera_services.py  test_bezels.py  test_buildargs.py  test_download.py  test_evmapy.py  test_guns_utils.py  test_hotkeygen.py  test_logger.py  test_squashfs.py  test_video_mode.py  test_vulkan.py  test_wheels_utils.py  test_wine.py
(+483 files in other folders)
